examples/python-web-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-python
spec:
  type: NodePort
  selector:
    app: demo-python-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 30007
